--- a/package.json
+++ b/package.json
@@ -1,6 +1,8 @@
 {
   "name": "anki-reader",
+  "version": "0.1.0",
   "module": "index.ts",
+  "main": "index.ts",
   "type": "module",
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^6.9.0",
