--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "anki-reader",
-  "version": "0.2.0",
+  "version": "0.2.1",
   "module": "./lib/src/index.js",
   "main": "./lib/src/index.js",
   "type": "module",
@@ -29,5 +29,9 @@
   },
   "scripts": {
     "build": "npx tsc -p tsconfig.json && npx ts-add-js-extension add --dir=lib"
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/ewei068/anki-reader.git"
   }
 }
