--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "eslint-plugin-import": "^2.29.0",
     "eslint-plugin-n": "^16.2.0",
     "eslint-plugin-promise": "^6.1.1",
-    "typescript": "^4.8.4"
+    "isomorphic-fetch": "^3.0.0",
+    "typescript": "^4.8.4",
+    "web-streams-polyfill": "^3.2.1"
   },
   "peerDependencies": {
     "typescript": "^4.0.0"
@@ -24,6 +26,7 @@
   ],
   "types": "./lib/src/index.d.ts",
   "dependencies": {
+    "@zip.js/zip.js": "^2.7.30",
     "node-fetch": "2.6.1",
     "sql.js": "^1.8.0"
   },
